kick-mute + deps

--- a/bot/config.json
+++ b/bot/config.json
@@ -1,11 +1,17 @@
 {
-    "token": "default",
-    "repos": ["/SamuelMeu/Module-Bot/main/modules"],
-    "dependencies-repos": ["/SamuelMeu/Module-Bot/main/dependencies"],
+    "token": "",
+    "repos": [
+        "/SamuelMeu/Module-Bot/main/modules"
+    ],
+    "dependencies-repos": [
+        "/SamuelMeu/Module-Bot/main/dependencies"
+    ],
     "index-url": "https://raw.githubusercontent.com/SamuelMeu/Module-Bot/main/bot/index.js",
     "helper-url": "https://raw.githubusercontent.com/SamuelMeu/Module-Bot/main/bot/helper.js",
     "bot": {
-        "admins": ["id"],
+        "admins": [
+            "628750543447130113"
+        ],
         "prefix": "!"
     }
 }
